k8s/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
  - port: 4499
    targetPort: 4499
    protocol: TCP
